--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <header>
+      <!-- <div> -->
+      <button>
+        <h1 class="maski" onclick="reload()">Movie World</h1>
+      </button>
+      <!-- </div> -->
+
       <form id="form">
         <input type="text" id="search" class="search" placeholder="Search" />
       </form>
